--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,3 +6,7 @@ name = "javascript"
   [analyzers.meta]
   plugins = ["react"]
   environment = ["nodejs"]
+
+[[analyzers]]
+name = "test-coverage"
+enabled = true
